--- a/style.css
+++ b/style.css
@@ -436,3 +436,152 @@ img.support-img {
     color: #00000079;
     font-size: 13px;
 }
+
+
+@media screen and (max-width: 750px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    nav {
+        margin-bottom: 40px;
+    }
+
+    .nav-item,
+    .nav-item-active {
+        display: none;
+    }
+
+    .signup-btn {
+        font-size: 17px;
+        padding: 5px 10px;
+    }
+
+    .main {
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+
+    }
+
+    .diff {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .content {
+        width: 100%;
+        padding-left: 40px;
+        padding-right: 40px;
+        text-align: center;
+        gap: 100px;
+        margin: 0;
+        padding: 0;
+
+    }
+
+    .content h1 {
+        font-size: 40px;
+    }
+
+    .content-img {
+        padding-left: 50px;
+
+    }
+
+
+    .content-img img {
+        width: 80%;
+    }
+
+    img.support-img {
+        padding-left: 0;
+        height: 300px
+    }
+
+    .service-heading {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+
+    }
+
+    .service-heading h1 {
+        font-size: 40px;
+        width: 100%;
+    }
+
+    .services {
+        width: 100%;
+    }
+
+    .card-items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .customer-heading {
+        text-align: center;
+        width: 100%;
+        padding: 0;
+        margin-bottom: 30px;
+    }
+
+    .custo-card {
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .last-txt {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 30px;
+    }
+
+    .last-txt div {
+        text-align: center;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .logo-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .service {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .service-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+}
