--- a/style.css
+++ b/style.css
@@ -519,6 +519,11 @@ img.support-img {
         width: 100%;
     }
 
+    .p-text {
+        width: 100%;
+
+    }
+
     .services {
         width: 100%;
     }
